# Aisodoi-ting-2020

./: .gitignore  README.md
audio/: intro.aup  intro.flac  intro.m4a
audio/intro_data/eff/d1f/: eff1f6db.au  eff1f73a.au
backend/: .gitignore  Dockerfile  docker-compose.yml  main.py  pyproject.toml
backend/backend/: app.py  crud.py  models.py  orm.py  task.py
frames/: ffmpeg.txt
frockend/: package.json
frockend/src/: App.tsx
frockend/src/forms/: TaskForm.tsx
frontend/: .env.example  package.json
frontend/public/: index.html
frontend/src/: App.tsx  index.css  index.tsx
frontend/src/components/: HelpText.tsx  MissionFinish.tsx  MissionIcon.tsx  MissionMenu.tsx  Welcome.tsx
infra/: .gitignore  Pulumi.dev.yaml  Pulumi.yaml  apps.ts  certs.ts  clustersetup.ts  graveyard.ts  index.ts  package-lock.json  package.json
infra/kubernetes/: modified.txt
infra/kubernetes/yamls/: kubed-v0.12.0.yaml  nginx-ingress-v0.40.1.yaml
kiertotalo.us/: Dockerfile  e  house_mapping.mtl  index.html
